fix: fixing qr image layout problems on moblie device

--- a/app/index.css
+++ b/app/index.css
@@ -24,7 +24,7 @@ body
 
     position: fixed;
     right: 0;
-    bottom: 20vh;
+    bottom: 8vh;
     left: 0;
 
     width: 100%;
@@ -101,8 +101,8 @@ body
     padding: 20px 12px 10px;
 
     color: #4c4c4c;
-    border-color: #dedede;
     border-bottom: solid 2px;
+    border-color: #dedede;
 
     align-items: center;
 }
